# CardShuffler

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  Makefile.sim  README.md  pico_sdk_import.cmake
sim/: sim_display.c  sim_encoder.c  sim_main.c  sim_motor.c  sim_pico.h
sim/pico/: stdlib.h
src/: config.h  main.c
src/display/: graphics.c  graphics.h  icons.c  icons.h  st7735.c  st7735.h
src/input/: encoder.c  encoder.h
src/motor/: motor.c  motor.h  strategies.c  strategies.h
src/ui/: menu.c  menu.h
